Boton para ir a /blog en la seccion de blogs del home

--- a/frontend/src/containers/pages/Home/styles.module.css
+++ b/frontend/src/containers/pages/Home/styles.module.css
@@ -102,6 +102,13 @@
   text-align: center;
 }
 
+.blog__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
 @media (max-width: 1500px){
   .header__slider--overlay {
     -webkit-clip-path: polygon(0 0, 56% 0, 48% 100%, 0% 100%);
