/refugios huellas de fondo

--- a/frontend/src/containers/pages/Refugios/styles.module.css
+++ b/frontend/src/containers/pages/Refugios/styles.module.css
@@ -1,3 +1,9 @@
+.refugios-section {
+  background-image: url(/icons/imagen\ de\ fondo\ de\ huellas/bg-3.png);
+  background-size: cover;
+  padding: 60px 0;
+}
+
 .headerImg {
   width: 100%;
 }
