--- a/frontend/src/containers/pages/Refugios/components/Refugio/styles.module.css
+++ b/frontend/src/containers/pages/Refugios/components/Refugio/styles.module.css
@@ -6,7 +6,7 @@
     width: 80%;
 
     border: none;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: #e9ecef;
     border-radius: clamp(20px, 3vw, 30px);
 
     padding: 0.5% 2.5% 0.5% 2.5%;
