--- a/frontend/src/containers/pages/Perdidos/styles.module.css
+++ b/frontend/src/containers/pages/Perdidos/styles.module.css
@@ -1,6 +1,6 @@
 .perdidos {
 	background-image: url('/icons/imagen\ de\ fondo\ de\ huellas/bg-3.png');
-	background-position: center;
+	background-size: cover;
 }
 
 .texto-container{
