Cambio estilos estadisticas del home

--- a/frontend/src/components/Stats/styles.module.css
+++ b/frontend/src/components/Stats/styles.module.css
@@ -5,7 +5,7 @@
   width: 100%;
   background-color: #DE341D;
   padding: 50px 0;
-  margin-bottom: 100px;
+  margin: 100px 0;
 }
 .stats__stat {
   width: 200px;
