--- a/frontend/src/containers/pages/Nosotros/styles.module.css
+++ b/frontend/src/containers/pages/Nosotros/styles.module.css
@@ -56,6 +56,20 @@
   font-size: 20px;
   text-align: center;
 }
+
+.nosotros__devs {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 10px;
+  margin: 20px 0 10px;
+}
+
+.nosotros__dev {
+  width: 70px;
+  border-radius: 50%;
+}
+
 .nosotros__item-text {
   text-align: center;
   margin: 10px 0;
@@ -103,6 +117,19 @@
   .nosotros__why {
     margin: 0 260px;
   }
+  .nosotros__why {
+    flex-direction: column-reverse;
+  }
+  .nosotros__why-img {
+    width: 100%;
+    object-fit: cover;
+    height: 400px;
+    object-position: 50% 20%;
+  }
+  .nosotros__why-text {
+    padding: 10px 40px 20px;
+  }
+  
 }
 @media (max-width: 1200px){
   .nosotros-info__container,
@@ -147,13 +174,27 @@
   .nosotros__item--large {
     margin: 0;
   }
+  .nosotros__item-text {
+    font-size: 18px;
+  }
+
+  .nosotros__devs {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  
+  .nosotros__dev {
+    width: 70px;
+    border-radius: 50%;
+  }
+
   .nosotros__why {
     margin: 0;
   }
 }
 @media (max-width: 600px){
   .nosotros-info__container {
-    margin: 0 60px;
+    margin: 0 40px;
   }
   .nosotros__title {
     font-size: 26px;
@@ -167,9 +208,14 @@
     height: 200px;
     object-fit: cover;
   }
+
+  .text-left {
+    align-items: center;
+  }
 }
-@media (max-width: 600px){
-  .nosotros-info__container {
-    margin: 0 40px;
+
+@media (max-width: 500px){
+  .nosotros__item-text {
+    font-size: 16px;
   }
 }
