Popup info sobre desarrolladores en nosotros

--- a/frontend/src/containers/pages/Nosotros/styles.module.css
+++ b/frontend/src/containers/pages/Nosotros/styles.module.css
@@ -204,7 +204,10 @@
   .nosotros__item-text {
     font-size: 18px;
   }
- 
+  .nosotros__devs {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
   .nosotros__why {
     margin: 0;
   }
