--- a/frontend/src/containers/pages/Nosotros/components/ImageWithPopup/styles.module.css
+++ b/frontend/src/containers/pages/Nosotros/components/ImageWithPopup/styles.module.css
@@ -5,3 +5,10 @@
   object-fit: cover;
   cursor: pointer;
 }
+
+@media (max-width: 400px){
+  .popupTrigger {
+    width: 60px;
+    height: 60px;
+  }
+}
