--- a/frontend/src/containers/pages/Contacto/styles.module.css
+++ b/frontend/src/containers/pages/Contacto/styles.module.css
@@ -1,7 +1,7 @@
 .contenedor-principal {
   min-height: 100vh;
   display: grid;
-  /* grid-template-rows: 6rem 1.7fr 1fr; */
+  place-items: center;
 }
 
 .contacto {
@@ -13,44 +13,124 @@
   height: 100vh;
 }
 
-.contacto__container {
-  box-shadow: 20px 20px 10px 0px #00000080;
-  background-color: #f5f5f5;
+.contenedor-principal form {
+  width: 85vw;
+  min-width: 250px;
+  max-width: 1200px;
+  max-height: 1200px;
+  min-height: 250px;
+  height: 85vh;
+
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 1rem;
-  min-width: clamp(12.5rem, 70vw, 75rem);
-  height: 60vh;
-  border-radius: 0.625rem;
-  padding: clamp(1rem, 2rem, 5rem);
+  flex-direction: row;
+}
+
+.contacto__information {
+  background-color: #ff0004b2;
+
+  height: 100%;
+
+  flex: 2;
+}
+
+.contacto__information header,
+.contacto__information article {
+  margin: clamp(20px, 10%, 65px);
+}
+
+.contacto__information h2 {
+  color: white;
+  font-size: clamp(20px, 3vw, 30px);
+  text-align: center;
+}
+
+.contacto__information h5,
+.contacto__information p {
+  color: #D9D9D9;
+  font-size: clamp(16px, 1.9vw, 19px);
+  text-align: center;
+}
+
+.contacto__information p {
+  color: white;
+  text-align: left;
+}
+
+.contacto__container {
+  height: 100%;
+
+  flex: 3;
+
+  background-color: #f7f0f0;
 }
 
 .contacto__inputs {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 4fr;
-  gap: 1rem 2rem;
-  height: 60vh;
-  width: 90%;
+  display: flex;
+  flex-direction: column;
+
+  margin: 10%;
+}
+
+.contacto__inputs>div {
+  position: relative;
+
+  margin-bottom: 10%;
+  width: 100%;
+}
+
+.contacto__inputs>div:has(.contacto__input:focus) label,
+.contacto__inputs>div:has(.contacto__input:valid) label {
+  transform: translateY(-100%);
+}
+
+.contacto__inputs>div:has(.contacto__textarea:focus) label,
+.contacto__inputs>div:has(.contacto__textarea:valid) label {
+  transform: translateY(-90%);
+}
+
+.contacto__inputs>div label {
+  position: absolute;
+  color: #575756;
+
+  transition: all 0.3s;
+}
+
+.contacto__input,
+.contacto__textarea {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  border-bottom: 1px solid #575756;
+  color: #ff0004b2;
+
+  width: 100%;
+  max-width: 500px;
+  min-width: 90px;
+
+  resize: none;
+
+  transition: all 0.2s;
 }
 
 .contacto__input {
-  padding-left: .5rem;
-  font-size: 1.1rem;
-}
-
-.contacto__textarea {
-  grid-area: 3 / 1 / 3 / 3;
-  resize: vertical;
-  font-family: Arial, Helvetica, sans-serif;
-  padding: .5rem 0 0 .5rem;
-  font-size: 1.1rem;
+  width: 60%;
 }
 
 .contacto__parrafo {
   margin: 0 auto 0 5%;
+}
+
+.contact__send {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #f7f0f0 inset !important;
 }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -59,46 +139,25 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-@media screen and (max-width: 715px) {
+@media screen and (max-width:800px) {
+
+  .contenedor-principal form {
+    margin-top: 165px;
+    margin-bottom: 100px;
+
+    flex-direction: column;
+  }
 
   .contacto__container {
-    height: auto;
+   width: 100%;
   }
 
   .contacto__inputs {
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    margin-top: 20px;
+    margin-bottom: 0;
   }
 
-  .contacto__input {
-    height: 32px;
+  .contact__send {
+    margin-bottom: 20px;
   }
 
-  .contacto__textarea {
-    height: 130px;
-  }
-}
-
-@media screen and (max-width: 715px) {
-  .contacto__container {
-    width: 400px;
-  }
-}
-
-@media screen and (max-width: 692px) {
-  .contacto {
-    padding: 40px 0;
-  }
-
-  .contacto__container {
-    width: 250px;
-  }
-}
-
-@media screen and (max-width: 445px) {
-  .contacto__container {
-    width: 100px;
-  }
 }
