--- a/frontend/src/containers/pages/Contacto/styles.module.css
+++ b/frontend/src/containers/pages/Contacto/styles.module.css
@@ -1,5 +1,5 @@
 .contenedor-principal {
-  min-height: 90vh;
+  min-height: 86vh;
   display: grid;
   place-items: center;
 }
@@ -17,7 +17,7 @@
   width: 85vw;
   min-width: 250px;
   max-width: 1200px;
-  max-height: 700px;
+  max-height: 600px;
   min-height: 250px;
   height: 85vh;
 
@@ -68,6 +68,7 @@
   flex-direction: column;
 
   margin: 10%;
+  margin-bottom: 30px;
 }
 
 .contacto__inputs>div {
@@ -136,6 +137,12 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+@media (max-width: 1300px){
+  .contenedor-principal form {
+  max-height: 560px;
+}
 }
 
 @media (max-width: 1100px){
