--- a/frontend/src/components/Nav/styles.module.css
+++ b/frontend/src/components/Nav/styles.module.css
@@ -64,6 +64,13 @@
 
 }
 
+.nav__contenedor-boton-user {
+	display: flex;
+	align-items: center;
+	gap: 2rem;
+	cursor: pointer;
+}
+
 .nav__separador {
 	height: 24px;
 	border: 1px solid #000;
