fix: register form

--- a/frontend/src/components/LoginForm/styles.module.css
+++ b/frontend/src/components/LoginForm/styles.module.css
@@ -18,6 +18,11 @@
   border-radius: 2.5rem;
 }
 
+.names {
+  display: flex;
+  justify-content: space-between;
+}
+
 .imgContainer {
   display: flex;
   position: relative;
