--- a/frontend/src/containers/pages/Contacto/styles.module.css
+++ b/frontend/src/containers/pages/Contacto/styles.module.css
@@ -147,8 +147,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 @media (max-width: 1300px){
   .contenedor-principal form {
-  max-height: 560px;
-}
+    max-height: 560px;
+  }
+  .contacto__information p {
+    font-size: 17px;
+  }
 }
 
 @media (max-width: 1100px){
@@ -161,9 +164,6 @@ input[type=number]::-webkit-outer-spin-button {
   .contacto__information h2 {
     font-size: 26px;
     margin-top: 60px;
-  }
-  .contacto__information p {
-    font-size: 18px;
   }
   .contacto__container {
     flex: 1.6;
@@ -195,6 +195,22 @@ input[type=number]::-webkit-outer-spin-button {
    width: 100%;
   }
 
+  .contacto__information header {
+    margin-bottom: 0;
+  }
+  .contacto__information article {
+    margin-top: 50px;
+  }
+
+  .contacto__information h5 {
+    font-size: 17px;
+    margin-bottom: 0;
+  }
+
+  .contacto__information p {
+    text-align: center;
+  }
+
   .contacto__inputs {
     margin-bottom: 0;
   }
@@ -203,4 +219,10 @@ input[type=number]::-webkit-outer-spin-button {
     margin-bottom: 20px;
   }
 
+}
+
+@media (max-width: 600px){
+  .contacto__information p {
+    font-size: 16px;
+  }
 }
