--- a/frontend/src/components/AdopcionesTarjeta/styles.module.css
+++ b/frontend/src/components/AdopcionesTarjeta/styles.module.css
@@ -24,9 +24,12 @@
 .text {
   font-weight: bold;
   color: #fff;
-  -webkit-text-stroke: 0.5px #000;
-  font-size: 30px;
+  /* -webkit-text-stroke: 0.5px #000; */
+  font-size: 20px;
   margin: 0;
+  background-color: #DE341D;
+  padding: 0px 20px 4px;
+  border-radius: 6px;
 }
 
 /* .text:nth-child(2) {
