--- a/frontend/src/containers/pages/Refugios/components/InformacionRefugio/styles.module.css
+++ b/frontend/src/containers/pages/Refugios/components/InformacionRefugio/styles.module.css
@@ -105,7 +105,7 @@
     gap: 10%;
 
     width: 130px;
-    padding: 1%;
+    padding: 14px;
 
     border: 1px solid transparent;
     border-radius: 8px;
