--- a/frontend/src/components/Formulario/styles.module.css
+++ b/frontend/src/components/Formulario/styles.module.css
@@ -127,6 +127,7 @@
 
 .buttonFile {
   position: relative;
+  width: 100%;
 }
 
 .buttonFile>input {
@@ -245,6 +246,32 @@
 .petSelected {
   outline: 2px solid #DE341D;
   background-color: #DE341D;
+}
+
+select {
+  padding: 8px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  background-color: transparent;
+  color: #8b6044;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: pointer;
+}
+
+/* Estilo para los options */
+select option {
+  background-color: #fff;
+  color: #8b6044;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Estilo cuando el select está enfocado */
+select:focus {
+  outline: none;
 }
 
 @media (max-width: 600px){
