--- a/frontend/src/containers/pages/Refugios/components/InformacionRefugio/styles.module.css
+++ b/frontend/src/containers/pages/Refugios/components/InformacionRefugio/styles.module.css
@@ -18,29 +18,52 @@
 }
 
 .information-section__header {
-    position: relative;
+    width: 100%;
+    /* height: 381px; */
 
-    max-width: 1371px;
-    min-width: 290px;
-    width: 90vw;
-
-    height: 381px;
-
-    margin-inline: auto;
+    /* margin-inline: auto;
 
     background-image: url('/icons/header-refugios.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: 50% 40%;
-    margin-top: 80px;
+    background-position: 50% 40%; */
+    margin-top: 80px; 
 }
 
-.information-section__header>div:first-child {
+.information-section__header--banner {
+    position: relative;
+    width: 100%;
+}
+.information-section__header--banner>div {
+    position: absolute;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.59) 29.56%, rgba(0, 0, 0, 0.00) 99.82%);
+    width: 100%;
+}
+
+.information-section__header--banner>.information-section__header--banner-title {
+    position: absolute;
+    display: flex;
+    align-items: end;
+    gap: 1rem;
+    height: 100%;
+    align-items: center;
+    padding-left: 2rem;
+}
+
+.information-section__header--banner>div>img {
+    width: 20%;
+}
+
+.information-section__header--banner img {
+    width: 100%;
+}
+
+/* .information-section__header>div:first-child {
     position: absolute;
     bottom: 0;
     left: 2%;
     z-index: 2;
-}
+} */
 
 .information-content__contact p {
     cursor: pointer;
@@ -63,18 +86,19 @@
     min-height: 67px;
 }*/
 
-.information-section__header>div>h2 {
-    font-size: clamp(30px, 4vw, 40px);
-
-    -webkit-text-stroke: 0.5px white;
+.information-section__header>div>div>div>h2 {
+    font-size: clamp(20px, 4vw, 40px);
+    color: #fff;
+    margin: 1rem !important;
+    /* -webkit-text-stroke: 0.5px white; */
 }
 
-.information-section__header>div>p {
-    font-size: clamp(25px, 3vw, 30px);
-
+.information-section__header>div>div>div>p {
+    font-size: clamp(15px, 3vw, 30px);
+    color: #fff;
     font-weight: 700;
-
-    -webkit-text-stroke: 0.5px white;
+    margin: 0 !important;
+    /* -webkit-text-stroke: 0.5px white; */
 }
 
 .information-section__content {
@@ -162,11 +186,11 @@
 .information-content__about,
 .information-content__information,
 .information-content__contact {
-    display: grid;
+    /* display: grid;
     grid-template-columns: repeat(2, 45%);
     gap: 5%;
 
-    justify-content: center;
+    justify-content: center; */
 
     margin-top: 5%;
 }
@@ -177,11 +201,22 @@
 
     font-size: 25px;
 
-    text-align: center;
+    /* text-align: center; */
 }
 
 .information-content__about>div {
     /*border: 1px solid red;*/
+}
+
+.information-content__pets h3 {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+}
+
+.information-content__pets p {
+    margin-inline: 0 !important;
+    width: 70% !important;
 }
 
 .information-content__imgs {
@@ -232,7 +267,7 @@
 }
 
 .information-content__information>div:nth-child(2)>div>img {
-    max-width: 133px;
+    max-width: 250px;
     min-width: 80px;
     width: 15vw;
     max-height: 269px;
@@ -259,8 +294,12 @@
 .information-content__contact {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
     margin: 0;
+}
+
+.information-content__contact>h3 {
+    text-align: center;
 }
 
 .information-content__contact>ol{
@@ -303,12 +342,12 @@
 
 .information-content__donate h4 {
     font-size: 25px;
-    text-align: center;
+    /* text-align: center; */
     margin: 25px 0;
 }
 .information-content__donate ul {
     list-style-type: none;
-    text-align: center;
+    /* text-align: center; */
     padding: 0;
     font-weight: 700;
     font-size: 18px;
