--- a/frontend/src/containers/pages/Contacto/styles.module.css
+++ b/frontend/src/containers/pages/Contacto/styles.module.css
@@ -29,9 +29,6 @@
 
 .contacto__information {
   background-color: #ff0004b2;
-
-  height: 100%;
-
   flex: 2;
 }
 
@@ -185,7 +182,7 @@ input[type=number]::-webkit-outer-spin-button {
   }
 
   .contenedor-principal form {
-    margin-top: 165px;
+    margin-top: 185px;
     margin-bottom: 100px;
 
     flex-direction: column;
@@ -222,6 +219,11 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 @media (max-width: 600px){
+
+  .contenedor-principal form {
+    margin-top: 230px;
+  }
+
   .contacto__information p {
     font-size: 16px;
   }
