style: :lipstick: update styles

--- a/frontend/src/containers/pages/Contacto/styles.module.css
+++ b/frontend/src/containers/pages/Contacto/styles.module.css
@@ -178,7 +178,7 @@ input[type=number]::-webkit-outer-spin-button {
 @media screen and (max-width:800px) {
   .contenedor-principal {
     min-height: 100vh;
-    margin-top: 20px;
+    margin: 20px 0 200px 0;
   }
 
   .contenedor-principal form {
@@ -220,8 +220,19 @@ input[type=number]::-webkit-outer-spin-button {
 
 @media (max-width: 600px){
 
-  .contenedor-principal form {
-    margin-top: 230px;
+  .contenedor-principal {
+    margin: 120px 0 180px 0;
+  }
+
+  .contacto__information p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 340px){
+
+  .contenedor-principal {
+    margin: 150px 0 320px 0;
   }
 
   .contacto__information p {
