se corrigieron varios elementos

--- a/frontend/src/containers/pages/Terminos/styles.module.css
+++ b/frontend/src/containers/pages/Terminos/styles.module.css
@@ -1,6 +1,6 @@
 .terms-and-conditions {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 2rem auto;
   padding: 20px;
   background-color: #f8f8f8;
   border-radius: 8px;
