--- a/frontend/src/components/PopupCard/styles.module.css
+++ b/frontend/src/components/PopupCard/styles.module.css
@@ -16,7 +16,7 @@
 .popup__content {
   background: #fff;
   width: 400px;
-  height: 650px;
+  height: 600;
   overflow: hidden;
 }
 
@@ -60,10 +60,14 @@
   width: 16rem;
   height: 16rem;
   overflow: hidden;
+  position: relative;
 }
 
 .popup__image>img {
+  width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center; 
 }
 
 .popup__text__title {
@@ -82,7 +86,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   height: 100%;
   color: #343A40;
 }
